@@ -1,0 +1,7 @@
+<html>
+<body>
+Allows remote clients to authenticate and obtain a populated
+<code>Authentication</code> object.
+</body>
+</html>
+
